--- a/src/main/webapp/pages/MyProfile/MyProfile.html
+++ b/src/main/webapp/pages/MyProfile/MyProfile.html
@@ -17,7 +17,8 @@
                                 <wm-gridrow name="gridrow20">
                                     <wm-gridcolumn columnwidth="6" name="gridcolumn33" horizontalalign="center">
                                         <wm-picture name="picture1" picturesource="bind:&quot;services/cx2/Users/&quot;+Variables.CurrentUserDetails.dataSet.id+&quot;/content/photo&quot;" width="30em" height="30em" margin="unset unset 2% unset"></wm-picture>
-                                        <wm-button class="btn-default" caption="UPDATE PROFILE PICTURE" type="button" margin="unset 0.5em" name="buttonUpdateProfilePic" width="50%" iconclass="wi wi-file-upload" on-click="Widgets.dialog1.open()" fontweight="bold" fontsize="15"></wm-button>
+                                        <wm-button class="btn-default btn-primary" caption="Upload New Photo" type="button" margin="unset 0.5em" name="buttonUpdateProfilePic" iconclass="wi wi-file-upload" on-click="Widgets.dialog1.open()"
+                                        horizontalalign="center"></wm-button>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="6" name="gridcolumn34" padding="unset unset unset 5%">
                                         <wm-composite name="composite1" width="80%" margin="2% unset unset unset">
@@ -65,7 +66,8 @@
                                         <wm-composite width="80%" margin="2% unset unset unset" name="composite7">
                                             <wm-label class="col-md-3 control-label" name="label27" caption="State"></wm-label>
                                             <wm-container class="col-md-9" name="container7">
-                                                <wm-select name="selectSt" dataset="bind:Variables.AllStates.dataSet" searchkey="stateName" displaylabel="stateName" datafield="All Fields" orderby="stateName:asc" datavalue="bind:Variables.CurrentUserDetails.dataSet.states" displayfield="stateName" placeholder=""></wm-select>
+                                                <wm-select name="selectSt" dataset="bind:Variables.AllStates.dataSet" searchkey="stateName" displaylabel="stateName" datafield="All Fields" orderby="stateName:asc" datavalue="bind:Variables.CurrentUserDetails.dataSet.states"
+                                                displayfield="stateName" placeholder=""></wm-select>
                                             </wm-container>
                                         </wm-composite>
                                         <wm-composite width="80%" margin="2% unset" name="composite8">
@@ -80,13 +82,12 @@
                                                 <wm-text name="textctry" datavalue="bind:Variables.CurrentUserDetails.dataSet.country"></wm-text>
                                             </wm-container>
                                         </wm-composite>
-                                        <wm-button class="btn-primary" caption="Save" type="button" margin="unset unset unset 60%" name="buttonSaveProInfo" width="20%" iconclass="wi wi-save" on-click="Variables.UpdateInfoFromMyProfile.invoke()" fontweight="bold" fontsize="15"></wm-button>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow22">
-                                    <wm-gridcolumn columnwidth="2" name="gridcolumn37"></wm-gridcolumn>
-                                    <wm-gridcolumn columnwidth="8" name="gridcolumn38"></wm-gridcolumn>
-                                    <wm-gridcolumn columnwidth="2" name="gridcolumn39"></wm-gridcolumn>
+                                    <wm-gridcolumn columnwidth="12" name="gridcolumn38">
+                                        <wm-button class="btn-default btn-primary" caption="Save" type="button" margin="2% unset unset 80%" name="buttonSaveProInfo" iconclass="wi wi-save" on-click="Variables.UpdateInfoFromMyProfile.invoke()"></wm-button>
+                                    </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
                         </wm-panel>
@@ -94,13 +95,19 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow17_1">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn20_1">
-                        <wm-form errormessage="" captionposition="top" title="Update Password" enctype="application/x-www-form-urlencoded" method="put" dataset="UpdateNewPassword" captionalign="left" name="form1" postmessage="Password updated successfully" messagelayout="Toaster"
-                        class="panel-primary" iconclass="wi wi-vpn-key">
+                        <wm-form errormessage="" captionposition="top" title="Update Password" enctype="application/x-www-form-urlencoded" method="put" dataset="UpdateNewPassword" captionalign="left" name="form1" postmessage="Password updated successfully"
+                        messagelayout="Toaster" class="panel-primary" iconclass="wi wi-vpn-key">
                             <wm-layoutgrid columns="1" name="layoutgrid5_1">
+                                <wm-gridrow name="gridrow27_1">
+                                    <wm-gridcolumn columnwidth="12" name="gridcolumn33_4">
+                                        <wm-label padding="unset 0.5em" name="label17" caption="PASSWORD REQUIREMENTS:" fontweight="bold"></wm-label>
+                                        <wm-label padding="unset 0.5em" name="label18_1" caption="All passwords must contain a minimum of 8 characters including at least 1 capital letter, 1 number, and 1 special character (e.g. @$!%*?&amp;)"></wm-label>
+                                    </wm-gridcolumn>
+                                </wm-gridrow>
                                 <wm-gridrow name="gridrow21">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn24_1">
                                         <wm-composite name="composite10">
-                                            <wm-label class="col-md-3 control-label" name="label14" caption="Password"></wm-label>
+                                            <wm-label class="col-md-3 control-label" name="label14" caption="New Password"></wm-label>
                                             <wm-container class="col-md-9" name="container10">
                                                 <wm-text name="textPwd" on-keyup="textPwdKeyup($event, $scope)" required="true" regexp="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[$@$!%*?&amp;])[A-Za-z\d$@$!%*?&amp;]{8,}" type="password"></wm-text>
                                             </wm-container>
@@ -110,18 +117,19 @@
                                 <wm-gridrow name="gridrow22_2">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn25_2">
                                         <wm-composite name="composite12">
-                                            <wm-label class="col-md-3 control-label" name="label16" caption="Confirm Password"></wm-label>
+                                            <wm-label class="col-md-3 control-label" name="label16" caption="Confirm New Password"></wm-label>
                                             <wm-container class="col-md-9" name="container12">
                                                 <wm-text name="textRePwd" on-keyup="textRePwdKeyup($event, $scope)" regexp="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[$@$!%*?&amp;])[A-Za-z\d$@$!%*?&amp;]{8,}" required="true" type="password"></wm-text>
                                             </wm-container>
                                         </wm-composite>
-                                        <wm-label padding="unset 0.5em" name="label17" caption="PASSWORD REQUIREMENTS.  All passwords must contain a minimum of 8 characters.  You must use a minimum of 1 letter, 1 number and one special symbol"></wm-label>
+                                    </wm-gridcolumn>
+                                </wm-gridrow>
+                                <wm-gridrow name="gridrow27">
+                                    <wm-gridcolumn columnwidth="12" name="gridcolumn36_1">
+                                        <wm-button class="btn-default btn-primary" caption="Save" type="submit" margin="2% unset unset 80%" name="buttonUpdateNew" iconclass="wi wi-save"></wm-button>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
-                            <wm-buttongroup horizontalalign="right" class="form-action col-md-12" name="buttongroup1">
-                                <wm-button caption="Update" type="submit" class="btn-primary" name="buttonUpdate"></wm-button>
-                            </wm-buttongroup>
                         </wm-form>
                     </wm-gridcolumn>
                 </wm-gridrow>
@@ -183,7 +191,7 @@
                         <wm-panel iconclass="wi wi-notifications" name="panelMyNotifications" title="My Notifications" class="panel-primary">
                             <wm-label padding="unset 0.5em" name="label32" caption="Please select your email notification frequency:" fontweight="bold" fontsize="15"></wm-label>
                             <wm-radioset height="auto" dataset="Immediately,Daily(Recommended),Weekly,Monthly,None" selectedvalue="bind:Variables.CurrentUserDetails.dataSet.communicationFrequency" name="radiosetCF" required="true"></wm-radioset>
-                            <wm-button class="btn-default btn-primary" caption="Save" type="button" margin="unset unset unset 80%" width="20%" iconclass="wi wi-save" name="buttonSaveCF" on-tap="Variables.UpdateCFInProfile.invoke()"></wm-button>
+                            <wm-button class="btn-default btn-primary" caption="Save" type="button" margin="unset unset unset 80%" iconclass="wi wi-save" name="buttonSaveCF" on-tap="Variables.UpdateCFInProfile.invoke()"></wm-button>
                         </wm-panel>
                     </wm-gridcolumn>
                 </wm-gridrow>
@@ -246,7 +254,8 @@
                     </wm-gridrow>
                     <wm-gridrow name="gridrow17">
                         <wm-gridcolumn columnwidth="12" name="gridcolumn28">
-                            <wm-form-field name="communicationFrequency" displayname="Communication Frequency" show="false" primary-key="false" generator="assigned" key="communicationFrequency" type="string" widget="null" maxchars="255" placeholder="Enter value" defaultvalue="bind:Widgets.radiosetCF.datavalue"></wm-form-field>
+                            <wm-form-field name="communicationFrequency" displayname="Communication Frequency" show="false" primary-key="false" generator="assigned" key="communicationFrequency" type="string" widget="null" maxchars="255" placeholder="Enter value"
+                            defaultvalue="bind:Widgets.radiosetCF.datavalue"></wm-form-field>
                         </wm-gridcolumn>
                     </wm-gridrow>
                     <wm-gridrow name="gridrow18">
@@ -258,8 +267,5 @@
                 <wm-form-action key="edit" class="form-update btn-secondary" iconclass="wi wi-pencil" action="edit()" display-name="Edit" show="true" type="button" update-mode="false" shortcutkey=""></wm-form-action>
             </wm-liveform>
         </wm-dialog>
-    </wm-view>
-    <wm-view class="dialog-view" name="view3">
-        <wm-pagedialog name="pagedialogNewForm" content="NewForm" title="New Form"></wm-pagedialog>
     </wm-view>
 </wm-page>
