--- a/src/main/webapp/pages/MyMunicipality/MyMunicipality.html
+++ b/src/main/webapp/pages/MyMunicipality/MyMunicipality.html
@@ -113,6 +113,25 @@
                         </wm-tile>
                     </wm-gridcolumn>
                 </wm-gridrow>
+                <wm-gridrow name="gridrow10">
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn21" padding="2em unset" horizontalalign="center">
+                        <wm-tile width="240px" height="160px" class="bg-primary" on-click="Variables.goToPage_ManageGISData.invoke()" name="tile7">
+                            <wm-layoutgrid height="100%" name="layoutgrid8">
+                                <wm-gridrow height="100%" name="gridrow11">
+                                    <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="2em unset unset unset" class="col-xs-3" name="gridcolumn24">
+                                        <wm-icon iconsize="3em" iconclass="wi wi-view-list" name="icon7"></wm-icon>
+                                    </wm-gridcolumn>
+                                    <wm-gridcolumn columnwidth="9" padding=".2em unset unset unset" horizontalalign="center" class="col-xs-9" name="gridcolumn25">
+                                        <wm-label caption="GIS Maintenance" class="p" fontsize="1.5" fontunit="em" name="label15"></wm-label>
+                                        <wm-label caption="bind:Variables.SubDivisonCount.dataSet[$i].SubDivisonCount" fontsize="3" fontunit="em" class="p" name="label16"></wm-label>
+                                    </wm-gridcolumn>
+                                </wm-gridrow>
+                            </wm-layoutgrid>
+                        </wm-tile>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn22"></wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn23"></wm-gridcolumn>
+                </wm-gridrow>
             </wm-layoutgrid>
         </wm-page-content>
     </wm-content>
