--- a/src/main/webapp/pages/ManageGISData/ManageGISData.html
+++ b/src/main/webapp/pages/ManageGISData/ManageGISData.html
@@ -29,7 +29,7 @@
                         <wm-tabs name="tabs1">
                             <wm-tabpane name="tabpane1" title="Subdivisions">
                                 <wm-livegrid formlayout="dialog" name="livegrid1">
-                                    <wm-grid gridfirstrowselect="true" editmode="dialog" title="" dataset="bind:Variables.Cx2SubdivisionsData.dataSet" navigation="Classic" name="grid1" filtermode="multicolumn" exportformat="EXCEL">
+                                    <wm-grid gridfirstrowselect="false" editmode="dialog" title="" dataset="bind:Variables.Cx2SubdivisionsData.dataSet" navigation="Classic" name="grid1" filtermode="multicolumn" exportformat="EXCEL" on-click="Widgets.dialogSubdivisonParcels.open()">
                                         <wm-grid-column binding="municipalities.municipalityName" caption="Municipality Name" type="string" generator="assigned" show="true" related-entity-name="Municipalities" readonly="false"></wm-grid-column>
                                         <wm-grid-column binding="subdivision" caption="Subdivision" type="string" generator="assigned" show="true" readonly="false"></wm-grid-column>
                                         <wm-grid-column binding="subShortCode" caption="Sub Short Code" type="string" generator="assigned" show="true" readonly="false"></wm-grid-column>
@@ -38,6 +38,7 @@
                                         shortcutkey="" disabled="false"></wm-grid-action>
                                         <wm-grid-row-action key="updaterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-pencil" title="Edit" action="editRow()" accessroles="CXAdmin,MunicipalityAdmin" disabled="false"></wm-grid-row-action>
                                         <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleteRow()" accessroles="CXAdmin,MunicipalityAdmin" disabled="false"></wm-grid-row-action>
+                                        <wm-grid-row-action key="customRow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-list" title="View" action="Widgets.dialogSubdivisonParcels.open()" disabled="false"></wm-grid-row-action>
                                     </wm-grid>
                                     <wm-liveform novalidate="false" errormessage="" title="Subdivision Details" formlayout="dialog" iconclass="wi wi-edit" dataset="bind:Variables.Cx2SubdivisionsData.dataSet" captionalign="left" captionposition="top" name="liveform1">
                                         <wm-layoutgrid columns="1" name="layoutgrid1">
@@ -168,4 +169,45 @@
         </wm-page-content>
     </wm-content>
     <wm-footer content="footer" name="footer1"></wm-footer>
+    <wm-view class="dialog-view" name="viewSubdivisonParcels">
+        <wm-dialog dialogtype="design-dialog" modal="true" title="SUBDIVISION" iconclass="wi wi-file-text" name="dialogSubdivisonParcels" width="60%">
+            <wm-layoutgrid name="layoutgrid4_1">
+                <wm-gridrow name="gridrow12">
+                    <wm-gridcolumn columnwidth="2" name="gridcolumn30_1"></wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn26">
+                        <wm-label padding="unset 0.5em" caption="Subdivision" name="label3"></wm-label>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn27">
+                        <wm-label padding="unset 0.5em" caption="Sub Short Code" name="label4"></wm-label>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="2" name="gridcolumn31_1"></wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow14">
+                    <wm-gridcolumn columnwidth="2" name="gridcolumn32_2"></wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn33_2" padding=".5em unset">
+                        <wm-label padding="unset 0.5em" name="label7" caption="bind:Widgets.grid1.selecteditem.subdivision" fontweight="bold" fontsize="20"></wm-label>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn34_1" padding=".5em unset">
+                        <wm-label padding="unset 0.5em" name="label8" caption="bind:Widgets.grid1.selecteditem.subShortCode" fontweight="bold" fontsize="20"></wm-label>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="2" name="gridcolumn35_1"></wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow13">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn28">
+                        <wm-grid title="PARCELS" dataset="bind:Variables.SubDivision_Gisrecords.dataSet" navigation="Classic" name="grid3_1" class="panel-warning">
+                            <wm-grid-column binding="parcel" caption="Parcel" generator="assigned" pcdisplay="true" mobiledisplay="true" type="string" readonly="true"></wm-grid-column>
+                            <wm-grid-column binding="lot" caption="Lot" generator="assigned" pcdisplay="true" mobiledisplay="true" type="string" readonly="true"></wm-grid-column>
+                            <wm-grid-column binding="section" caption="Section" generator="assigned" pcdisplay="true" mobiledisplay="true" type="string" readonly="true"></wm-grid-column>
+                            <wm-grid-column binding="streetNumber" caption="Street Number" generator="assigned" pcdisplay="true" mobiledisplay="true" type="string" readonly="true"></wm-grid-column>
+                            <wm-grid-column binding="streetName" caption="Street Name" generator="assigned" pcdisplay="true" mobiledisplay="true" type="string" readonly="true"></wm-grid-column>
+                            <wm-grid-column binding="city" caption="City" generator="assigned" pcdisplay="true" mobiledisplay="true" type="string" readonly="true"></wm-grid-column>
+                        </wm-grid>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+            </wm-layoutgrid>
+            <wm-dialogactions name="dialogactions1">
+                <wm-button class="btn-primary" caption="Close" on-click="closeDialog()" name="button1"></wm-button>
+            </wm-dialogactions>
+        </wm-dialog>
+    </wm-view>
 </wm-page>
