--- a/src/main/webapp/pages/CXGlobalSettings/CXGlobalSettings.html
+++ b/src/main/webapp/pages/CXGlobalSettings/CXGlobalSettings.html
@@ -5,6 +5,11 @@
         <wm-left-panel columnwidth="2" content="leftnav" name="left_panel1"></wm-left-panel>
         <wm-page-content columnwidth="10" name="page_content1">
             <wm-layoutgrid name="layoutgrid1">
+                <wm-gridrow name="gridrow13_1">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn13_1" padding=".5em unset">
+                        <wm-breadcrumb dataset="bind:Variables.BreadCrum.dataSet" name="breadcrumb1" itemlabel="label" itemicon="icon" itemlink="link"></wm-breadcrumb>
+                    </wm-gridcolumn>
+                </wm-gridrow>
                 <wm-gridrow name="gridrow1">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn1" padding="2% 10%">
                         <wm-liveform novalidate="false" errormessage="" title="Global Settings" iconclass="wi wi-edit" defaultmode="Edit" dataset="bind:Variables.Cx2GlobalSettingsData.dataSet" captionalign="left" captionposition="top" name="liveform2" formdata="bind:Variables.DefaultData.firstRecord"
